--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:regular,500,700,900" rel="stylesheet" />
+  <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+
   <title>CV profile</title>
 </head>
 
